--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,11 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^18.7.13",
+    "@types/node": "^18.7.14",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.3",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
