--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,2 @@
-DB_USERNAME=dawid
-DB_PASSWORD=cichy
+DB_CONNECTION='mongodb+srv://dawid:cichy@rest.xarzi.mongodb.net/NuclearDb?retryWrites=true&w=majority'
 TOKEN_SECRET=123NUC123
