--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
+  "dependencies": {
+    "@types/express": "^4.17.13",
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2",
+    "jwt-decode": "^3.1.2"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.42"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon backend/src/index.ts",
     "client": "npm start --prefix frontend",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
-  },
-  "dependencies": {
-    "nodemon": "^2.0.19"
   }
 }
