--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
     "@types/express": "^4.17.13",
+    "jwt-decode": "^3.1.2",
+    "mongoose": "^6.5.4",
     "nodemon": "^2.0.19",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.2",
-    "jwt-decode": "^3.1.2"
+    "typescript": "^4.6.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.42"
