--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@types/express": "^4.17.13",
+    "express": "^4.18.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.5.4",
     "nodemon": "^2.0.19",
