--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-DB_CONNECTION='mongodb+srv://dawid:cichy@rest.xarzi.mongodb.net/NuclearDb?retryWrites=true&w=majority'
-TOKEN_SECRET=123NUC123
-NODE_ENV='PRODUCTION'
+DB_CONNECTION
+TOKEN_SECRET
+NODE_ENV
