--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-confirm-alert": "^3.0.6",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.3",
