--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_CONNECTION=
-TOKEN_SECRET=
+DB_CONNECTION='mongodb+srv://dawid:cichy@rest.xarzi.mongodb.net/NuclearDb?retryWrites=true&w=majority'
+TOKEN_SECRET=123NUC123
 NODE_ENV='production'
